test/fail/space-before-function-paren-named.js
/* eslint-disable no-unused-vars -- We're only testing ESLint rules. */

// FAIL: space-before-function-paren

function spaceBeforeFunctionParenNamedNo () {}
